--- a/Vocabulous/src/account-view.html
+++ b/Vocabulous/src/account-view.html
@@ -32,6 +32,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-input/paper-input.html">
 <link rel="import" href="../bower_components/iron-overlay-behavior/iron-overlay-behavior.html">
 <link rel="import" href="../bower_components/app-layout/app-layout.html">
+<link rel="import" href="../bower_components/iron-icons/communication-icons.html">
 <link rel="import" href="my-icons.html">
 
 <link rel="import" href="../bower_components/app-storage/app-localstorage/app-localstorage-document.html">
@@ -117,8 +118,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         };
       }
       iron-icon.emailIcon{
-        width: 25px;
-        height: 25px;
+        width: 30px;
+        height: 30px;
         margin-right: 20px;
       }
 
@@ -195,7 +196,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <tr>
               <td>
                   <paper-input class="email" label="Email">
-                      <iron-icon class="emailIcon" icon="vaadin:envelope-o" slot="prefix"></iron-icon>
+                      <iron-icon class="emailIcon" icon="communication:mail-outline" slot="prefix"></iron-icon>
                   </paper-input>
               </td>
                 
