--- a/Vocabulous/src/browse-unit.html
+++ b/Vocabulous/src/browse-unit.html
@@ -17,6 +17,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/d2l-dropdown/d2l-dropdown-content.html">
 <link rel="import" href="../bower_components/d2l-dropdown/d2l-dropdown-menu.html">
 <link rel="import" href="../bower_components/d2l-menu/d2l-menu-item.html">
+<link rel="import" href="../bower_components/paper-search/paper-search-bar.html">
+<link rel="import" href="../bower_components/iron-icons/image-icons.html">
+<link rel="import" href="../bower_components/iron-icons/hardware-icons.html">
 <link rel="import" href="shared-styles.html">
 
 <dom-module id="browse-unit">
@@ -36,23 +39,41 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       paper-icon-button.back{
         font-size: 0.65em;
-        width: 30px;
-        height: 30px;
+        width: 45px;
+        height: 45px;
         margin-left: -10px;
-        margin-top: -49px;
+        margin-top: -55px;
         position:absolute;
       }
-      p{
+      paper-search-bar{
         margin-left: 40px;
+      }
+      #filters{
+        border-radius: 5px;
+        border-color: var(--secondaryFontColorCard);
+        background-color: var(--hover-color);
+        color: var(--secondaryFontColorCard);
+      }
+      #tune{
+        margin-top: -50px;
+        float:right;
+        color: #a5a5a5;
       }
     </style>
 
     <div class="card">
       <h1>Browse Unit</h1>
-      <paper-icon-button name="backicon" icon="vaadin:chevron-left" class="back"></paper-icon-button>
-      <p>Die Units, die von anderen Usern erstellt wurden, können mit Hilfe eines Filters bei der Searchbar angezeigt
-         und in die eigene Unit-Sammlung übernommen werden.
-      </p>
+      <paper-icon-button name="backicon" icon="hardware:keyboard-arrow-left" class="back"></paper-icon-button>
+      <paper-search-bar search="{{search}}" loading="[[loading]]" hide-filter-button></paper-search-bar>
+      <paper-icon-button id="tune" name="tune" icon="image:tune"></paper-icon-button>
+      <paper-filter-dialog id="filters">
+        <h2>Filters</h2>
+        <p>Filter für die Searchbar</p>
+        <div class="buttons">
+          <paper-button class="confirmButtons"name="no">No</paper-button>
+          <paper-button class="confirmButtons"name="yes">Yes</paper-button>
+        </div>
+      </paper-filter-dialog>
     </div>
   </template>
 
@@ -61,6 +82,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       static get is() { return 'browse-unit'; }
       _getReturnButton(){
         return Polymer.dom(this.root).querySelector("paper-icon-button[name=backicon]");
+      }
+      _getPaperFilterDialog(){
+        return Polymer.dom(this.root).querySelector("paper-filter-dialog[id=filters]");
       }
     }
 
