--- a/Vocabulous/src/my-app.html
+++ b/Vocabulous/src/my-app.html
@@ -51,7 +51,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --cardBackgroundcolor: #fff;
         --cardFontColor: #757575;
         --headlineCard: #212121;
-        --secondaryFontColorCard:#A4A4A4;
+        --secondaryFontColorCard:#777777;
         --hover-color: #f2f2f2;
         display: block;
       }
