--- a/Vocabulous/src/translate-page.html
+++ b/Vocabulous/src/translate-page.html
@@ -11,7 +11,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
 <link rel="import" href="shared-styles.html">
 <link rel="import" href="../bower_components/paper-toggle-button/paper-toggle-button.html">
-<link rel="import" href="../bower_components/iron-icons/hardware-icons.html">
 
 <dom-module id="translate-page">
   <template>
@@ -30,10 +29,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       paper-icon-button.back{
         font-size: 0.65em;
-        width: 45px;
-        height: 45px;
+        width: 30px;
+        height: 30px;
         margin-left: -10px;
-        margin-top: -55px;
+        margin-top: -49px;
         position:absolute;
       }
       paper-search-bar{
@@ -81,7 +80,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <div class="card">
       <h1>Translate</h1>
-      <paper-icon-button name="backicon" icon="hardware:keyboard-arrow-left" class="back"></paper-icon-button>
+      <paper-icon-button name="backicon" icon="vaadin:chevron-left" class="back"></paper-icon-button>
       <paper-search-bar search="{{search}}" loading="[[loading]]" hide-filter-button></paper-search-bar>
     </div>
     <table name="translate"></table>
