--- a/Vocabulous/src/unit-page.html
+++ b/Vocabulous/src/unit-page.html
@@ -19,8 +19,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/d2l-dropdown/d2l-dropdown-content.html">
 <link rel="import" href="../bower_components/d2l-dropdown/d2l-dropdown-menu.html">
 <link rel="import" href="../bower_components/d2l-menu/d2l-menu-item.html">
-<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
-<link rel="import" href="../bower_components/iron-icons/hardware-icons.html">
 <link rel="import" href="shared-styles.html">
 
 <dom-module id="unit-page">
@@ -72,10 +70,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       paper-icon-button.back{
         font-size: 0.65em;
-        width: 45px;
-        height: 45px;
+        width: 30px;
+        height: 30px;
         margin-left: -10px;
-        margin-top: -55px;
+        margin-top: -49px;
         position:absolute;
       }
       d2l-dropdown{
@@ -85,15 +83,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <div class="card">
       <h1>Unit 1</h1> <!--Name der Unit-->
-      <paper-icon-button name="backicon" icon="hardware:keyboard-arrow-left" class="back"></paper-icon-button>
+      <paper-icon-button name="backicon" icon="vaadin:chevron-left" class="back"></paper-icon-button>
       <d2l-dropdown>
-              <paper-icon-button style="width: 45px;height: 45px;"class="d2l-dropdown-opener" name="menu" icon="icons:more-vert" noink></paper-icon-button>
+              <paper-icon-button style="width: 35px;height: 35px;"class="d2l-dropdown-opener" name="menu" icon="vaadin:ellipsis-dots-v" noink></paper-icon-button>
               <d2l-dropdown-menu>
                   <d2l-menu label="Menu">
                     <d2l-menu-item text="Practice Variants">
                         <d2l-menu>
-                            <d2l-menu-item name="practiceUnit" text="Practice"></d2l-menu-item>
-                            <d2l-menu-item name="practiceUnitSelectionmode" text="Selectionmode"></d2l-menu-item>
+                            <d2l-menu-item name="practiceUnit" text="Practice Unit"></d2l-menu-item>
                         </d2l-menu>
                     </d2l-menu-item>
                     <d2l-menu-item name="selfCheck" text="Self-check"></d2l-menu-item>
@@ -121,9 +118,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       _getPracticeButton(){
         return Polymer.dom(this.root).querySelector("d2l-menu-item[name=practiceUnit]");
-      }
-      _getPracticeButtonSelectionmode(){
-        return Polymer.dom(this.root).querySelector("d2l-menu-item[name=practiceUnitSelectionmode]");
       }
       _getExamButton(){
         return Polymer.dom(this.root).querySelector("d2l-menu-item[name=selfCheck]");
