--- a/Vocabulous/src/practiceunit-page.html
+++ b/Vocabulous/src/practiceunit-page.html
@@ -340,7 +340,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         return Polymer.dom(this.root).querySelector("paper-icon-button[name=backicon]");
       }
       _getLanguageInfo(){
-        return Polymer.dom(this.root).querySelector("iron-icon[class=language]");
+        return Polymer.dom(this.root).querySelector("paper-icon-button[class=language]");
       }
       _getNextInfo(){
         return Polymer.dom(this.root).querySelector("iron-icon[class=next]");
