--- a/old/src/unit-overview.html
+++ b/old/src/unit-overview.html
@@ -9,7 +9,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
-<!--<link rel="import" href="../bower_components/paper-search/paper-search-bar.html">-->
 <link rel="import" href="../bower_components/paper-search/paper-search-panel.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/vaadin-icons/vaadin-icons.html">
@@ -18,6 +17,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/d2l-dropdown/d2l-dropdown-menu.html">
 <link rel="import" href="../bower_components/d2l-menu/d2l-menu-item.html">
 <link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
+<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="shared-styles.html">
 
 <dom-module id="unit-overview">
@@ -83,13 +83,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       d2l-dropdown{
         float:right;
       }
-      paper-icon-button{
-        width: 35px;
-        height: 35px;
-        float:right;
-      }
+      
       paper-icon-button.trash{
         color:grey;
+        --iron-icon-width: 25px;
+        --iron-icon-height: 25px;
+        float:right;
+        margin-top: -5px;
       }
       paper-icon-button.trash:hover{
         color: red;
@@ -98,10 +98,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         color:var(--secondaryFontColorCard);
       }
       #confirm{
-        border: 2px solid;
+        /*border: 2px solid;*/
+        border-radius: 5px;
         border-color: var(--secondaryFontColorCard);
         background-color: var(--hover-color);
         color: var(--secondaryFontColorCard);
+      }
+      #menu{
+        width: 45px;
+        height: 45px;
+        float:right;
       }
     </style>
     	
@@ -116,7 +122,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </div>
       </paper-dialog>
         <d2l-dropdown>
-          <paper-icon-button class="d2l-dropdown-opener" name="menu" icon="vaadin:ellipsis-dots-v" noink></paper-icon-button>
+          <paper-icon-button id="menu" class="d2l-dropdown-opener" name="menu" icon="icons:more-vert" noink></paper-icon-button>
           <d2l-dropdown-menu>
             <d2l-menu label="Menu">
               <d2l-menu-item name="newUnit" text="Create New Unit"></d2l-menu-item>
